curve deform modifier from mesh edge doesnt work properly. #42324

Closed
opened 2014-10-21 04:23:54 +02:00 by Massimiliano Puliero · 7 comments

System Information
win7 64 quadro k600

Blender Version
hash: 04178d7

Short description of error
using a mesh edge converted to path as curve deformer doesn't update. it updates after closing and re-open the file.

Exact steps for others to reproduce the error
make the object in the scene deformed by the curve modifier.
steps: select the mesh then add the curve to the selection, press CTRL+P >>> curve deform.

curve_deform.blend

**System Information** win7 64 quadro k600 **Blender Version** hash: 04178d7 **Short description of error** using a mesh edge converted to path as curve deformer doesn't update. it updates after closing and re-open the file. **Exact steps for others to reproduce the error** make the object in the scene deformed by the curve modifier. steps: select the mesh then add the curve to the selection, press CTRL+P >>> curve deform. [curve_deform.blend](https://archive.blender.org/developer/F118725/curve_deform.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero

Added subscriber: @zeauro

Added subscriber: @zeauro

I confirm that deformation is not immediately updated.
No need to close/reopen the file to force refreshing. Passing curve into edit mode is sufficient.

I confirm that deformation is not immediately updated. No need to close/reopen the file to force refreshing. Passing curve into edit mode is sufficient.

This issue was referenced by 9ce8dfaf6a

This issue was referenced by 9ce8dfaf6a5ef406d37613f7ee921d0f1b53c94e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 9ce8dfaf6a.

Closed by commit 9ce8dfaf6a.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42324
No description provided.